--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,29 @@
   <link rel="stylesheet" type="text/css" href="splash/style.css">
 </head>
 <body>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyC5RvXAd5rhOjsbJKaU3dWBNe1weoysl6o",
+    authDomain: "shopping-app-e28bd.firebaseapp.com",
+    projectId: "shopping-app-e28bd",
+    storageBucket: "shopping-app-e28bd.appspot.com",
+    messagingSenderId: "860277284561",
+    appId: "1:860277284561:web:d0b8ab226362395ef16ff0",
+    measurementId: "G-X4CZWJBPVX"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -47,5 +70,6 @@
     <img class="center" src="splash/img/light-1x.png" />
   </picture>
   <script src="main.dart.js" type="application/javascript"></script>
+
 </body>
 </html>
